<resources>
    		<string name="urlgislayersjson">http://srfeed.com/GISLayers.aspx</string>
   			<string name="urlalertjson">http://srfeed.com/Alert.aspx</string>
   			<string name="urlemergencymapsjson">http://srfeed.com/EmergencyMaps.aspx</string>
    		<string name="urlselfiejson">http://srfeed.com/Overlay.aspx</string>
   			<string name="urlemergencyjson">http://srfeed.com/Emergency.aspx</string>
    		<string name="urlhospitalityjson">http://srfeed.com/Hospitality.aspx</string>
    		<string name="urlactivityjson">http://srfeed.com/Activity.aspx</string>
    		<string name="urlupdatejson">http://srfeed.com/Update.aspx</string>
    		<string name="urlupdatejsontestlocal">http://10.0.0.253/sunriverwebapp/Update.aspx</string>
    		<string name="urlupdatejsontestremote">http://listplus.no-ip.org/sunriverwebapp/Update.aspx</string>
    				<string name="urlservicesjson">http://srfeed.com/Services.aspx</string>
    		<string name="urlfindhomejson">http://srfeed.com/FindCountyAddress.aspx</string>
    		<string name="urlwelcomejson">http://srfeed.com/Welcome.aspx</string>
    		<string name="urldidyouknowjson">http://srfeed.com/DidYouKnow.aspx</string>
  		  	<string name="urlmapjson">http://srfeed.com/Map.aspx</string>
   		 	<string name="urlcalendarjson">http://srfeed.com/Calendar.aspx</string>
   		 	<string name="urltipsjson">http://srfeed.com/tips.aspx</string>
   		 	<string name="urltipsjsontestlocal">http://10.0.0.253/sunriverwebapp/tips.aspx</string>
   		 	<string name="urltipsjsontestremote">http://listplus.no-ip.org/sunriverwebapp/tips.aspx</string>
   		 	<string name="urlnewsfeedsjson">http://srfeed.com/NewsFeeds.aspx</string>
   		 	<string name="urlnewsfeedsjsontestlocal">http://10.0.0.253/sunriverwebapp/NewsFeeds.aspx</string>
   		 	<string name="urlnewsfeedstestremote">http://listplus.no-ip.org/sunriverwebapp/NewsFeeds.aspx</string>
   		 	<string name="urleventpicjson">http://srfeed.com/EventPics.aspx</string>
   		 	<string name="urleventpicjsontestlocal">http://10.0.0.253/sunriverwebapp/EventPics.aspx</string>
   		 	<string name="urleventpictestremote">http://listplus.no-ip.org/sunriverwebapp/EventPics.aspx</string>
   		 	<string name="urlpromotedeventjson">http://srfeed.com/PromotedEvents.aspx</string>
   		 	<string name="urlpromotedeventjsontestlocal">http://10.0.0.253/sunriverwebapp/PromotedEvents.aspx</string>
   		 	<string name="urlpromotedeventtestremote">http://listplus.no-ip.org/sunriverwebapp/PromotedEvents.aspx</string>
   		 	<string name="urllanejson">http://srfeed.com/Lanes.aspx</string>
   		 	<string name="urllanejsontestlocal">http://10.0.0.253/sunriverwebapp/Lanes.aspx</string>
   		 	<string name="urllanetestremote">http://listplus.no-ip.org/sunriverwebapp/Lanes.aspx</string>
    <string name="urlservices">http://www.srfeed.com/service1.asmx/Services</string>
    <string name="urlcalendar">http://www.srfeed.com/service1.asmx/Calendar</string>
    <string name="urlactivity">http://www.srfeed.com/service1.asmx/Activity</string>
    <string name="urlmap">http://www.srfeed.com/service1.asmx/Map</string>
    <string name="urlalert">http://www.srfeed.com/service1.asmx/Alert</string>
    <string name="urlupdate">http://www.srfeed.com/service1.asmx/Update</string>
    <string name="urlwelcome">http://www.srfeed.com/service1.asmx/Welcome</string>
    <string name="urlfindhomeother">http://www.srfeed.com/service1.asmx/FindCountyAddress</string>
    <string name="urldidyouknow">http://www.srfeed.com/service1.asmx/DidYouKnow</string>
    <string name="urlselfie">http://www.srfeed.com/service1.asmx/Overlay</string>
    <string name="urlallhomes">http://www.srfeed.com/service1.asmx/addConvert</string>
    <string name="urlservicesother">http://listplus.no-ip.org/Sunriver/service1.asmx/Services</string>
    <string name="urlcalendarother">http://listplus.no-ip.org/Sunriver/service1.asmx/Calendar</string>
    <string name="urlactivityother">http://listplus.no-ip.org/Sunriver/service1.asmx/Activity</string>
    <string name="urlmapother">http://listplus.no-ip.org/Sunriver/service1.asmx/Map</string>
    <string name="urlalertother">http://listplus.no-ip.org/Sunriver/service1.asmx/Alert</string>
    <string name="urlupdateother">http://listplus.no-ip.org/Sunriver/service1.asmx/Update</string>
    <string name="urlwelcomeother">http://listplus.no-ip.org/Sunriver/service1.asmx/Welcome</string>
    <string name="urlselfieother">http://listplus.no-ip.org/Sunriver/service1.asmx/Overlay</string>
    <string name="urlfindhome">http://listplus.no-ip.org/Sunriver/service1.asmx/FindCountyAddress</string>
    <string name="arcgis_userid">seabaseballfan</string>
    <string name="arcgis_password">Wp_p18mm</string>
    <string name="crash_toast_text">Sunriver Navigator has crashed. Standby while an error report is formatted.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast2">Thank you!</string>
    <string name="crash_dialog_title">Sunriver Navigator has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.  The data will be formatted into an email</string>
    <string name="aboutusstring">About Us</string>
    <string name="favoritesstring">Favorites</string>
    <string name="weatherchoosertitle">Choose next page:</string>
    <string name="aboutuslink_privacypolicy">http://www.sunriverstyle.com/privacy-policy</string>
    <string name="aboutuslink_termsandconditions">http://www.sunriverstyle.com/terms-and-services</string>
    <string name="aboutusverbiage">Nestled at the base of the Cascade mountain range — Sunriver, Oregon is a scenic mecca for outdoor enthusiasts and those looking for a chance to commune with nature, but also have access to all the amenities you would ever need. \n
\n \n Mapping API provided by Esri ArcGIS Runtime SDK for Android
</string>
    <string name="aboutusversionheading">Version</string>
    <string name="aboutusprivacypolicyheading">Click here to view our Privacy Policy</string>
    <string name="aboutustermsandconditionsheading">Click here to view our Terms and Conditions</string>
    <string name="aboutustitle">Sunriver App</string>
    <string name="contactusstring">Contact Us</string>
    <string name="settingsstring">Settings</string>
    <string name="emailto">MobileApp@srowners.com</string>
    <string name="map_offline_url4">http://tiledbasemaps.arcgis.com/arcgis/rest/services/NatGeo_World_Map/MapServer</string>
    <string name="wtf">wtf</string>
    <string name="gotourl">Open URL?</string>
    <string name="disclaimer">The information on this map was derived from SROA digital databases . Care was taken in the creation of this map. SROA cannot accept any responsibility for errors, omissions, or positional accuracy. There are no warranties, expressed or implied, including the warranty of merchantability or fitness for a particular purpose, accompanying this product. However, notification of any errors will be appreciated.</string>
    <string name="disclaimer_donotshowagain">Do not show again</string>
	<string name="webcam_url_1">http://www.weather.sunriverowners.org/davisvp2/snapshot.jpg</string>
	<string name="webcam_url_2">http://tripcheck.com/popups/Cam.asp?curRegion=5&amp;camera=1923&amp;camera=631</string>
	<string name="webcam_url_3">http://67.204.166.155:8081/index.asp</string>
	<string name="webcam_url_4">http://www.mtbachelor.com/winter/mountain/cams/lightbox.cams</string>
	<string name="webcam_title_1">Davis Point</string>
	<string name="webcam_title_2">US97 at Lava Butte</string>
	<string name="webcam_title_3">Sunriver</string>
	<string name="webcam_title_4">Mt Bachelor</string>
	<string name="wunderground_api_conditions">http://api.wunderground.com/api/bc2f8db95e1b5405/conditions/q/OR/Sunriver.json</string>
    <string name="wunderground_api_forcast">http://api.wunderground.com/api/bc2f8db95e1b5405/forecast/q/OR/Sunriver.json</string>
    <string name="wunderground_api_forcast10days">http://api.wunderground.com/api/bc2f8db95e1b5405/forecast10days/q/OR/Sunriver.json</string>
    <string name="wunderground_api_hourly">http://api.wunderground.com/api/bc2f8db95e1b5405/hourly/q/OR/Sunriver.json</string>
    <string name="wunderground_api_conditionsprior">http://api.wunderground.com/api/2ba3560f9d0306dd/conditions/q/OR/Sunriver.json</string>
    <string name="wunderground_api_forcastprior">http://api.wunderground.com/api/2ba3560f9d0306dd/forecast/q/OR/Sunriver.json</string>
    <string name="wunderground_api_forcast10daysprior">http://api.wunderground.com/api/2ba3560f9d0306dd/forecast10days/q/OR/Sunriver.json</string>
    <string name="wunderground_api_hourlyprior">http://api.wunderground.com/api/2ba3560f9d0306dd/hourly/q/OR/Sunriver.json</string>
    <string name="emergencytimerintervalinseconds">240</string>
    <string name="emergencynotificationtitle">Sunriver Emergency Notification</string>
    <string name="app_name">Sunriver</string>
    <string name="location_layers">Location layers</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_tryagain">Try again</string>
    <string name="resortlothint">Number</string>
    <string name="resortlanehint">Street name</string>
    <string name="title_activity_maps">Sunriver Maps</string>
    <string name="title_ActivityForPromotedEventCategories">Promoted Event - </string>
    <string name="title_activity_ActivityFavorites">Sunriver Favorites</string>
    <string name="title_activity_webcams">Sunriver Webcams</string>
    <string name="title_activity_services">Sunriver Services</string>
    <string name="title_activity_servicesdetail">Sunriver Services Detail</string>
    <string name="title_activity_activitiesdetail">Sunriver Activity Detail</string>
    <string name="title_activity_hospitalitydetail">Sunriver Where to Stay</string>
    <string name="location_popup_restaurants">Restaurants</string>
    <string name="location_popup_retail">Shopping</string>
    <string name="key_in_your_resort_address">Key in your Sunriver Address</string>
    <string name="location_popup_pools">Pools</string>
    <string name="location_popup_tennis_courts">Tennis courts</string>
    <string name="location_popup_gas">Gas</string>
    <string name="location_popup_perfect_picture_spots">Perfect picture spots</string>
    <string name="location_popup_bike_paths">Bike paths</string>
    <string name="location_popup_close_button">Close</string>
    <string name="location_popup_showonmap_button">Show on map</string>
    <string name="application_settings">Settings</string>
    <string name="callout_close">Close</string>
    <string name="disclaimer_closebutton">Continue</string>
    <string name="disclaimer_cancelbutton">Cancel</string>
    <string name="map_arcgis_url1">http://sampleserver1.arcgisonline.com/ArcGIS/rest/services/Specialty/ESRI_StateCityHighway_USA/MapServer</string>
    <string name="map_arcgis_url2">http://services.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer</string>
    <string name="map_arcgis_url3">http://services.arcgisonline.com/ArcGIS/rest/services/USA_Topo_Maps/MapServer</string>
    <string name="map_arcgis_url4">http://services.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer</string>
    <string name="bike_path_layer">http://tiles.arcgis.com/tiles/PPpMbTaRDuKoF0e4/arcgis/rest/services/SRPathways/MapServer</string>
    <string name="title_activity_web_site">WebSite</string>
    <string name="title_activity_MainActivity">Sunriver Navigator</string>
    <string name="action_settingsx">Settings</string>
    <string name="title_activity_website">Website</string>
    <string name="service_popup_contentDescripton"></string>
</resources>