<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
		<PreferenceCategory
			android:title="Urls"
		>
			  <EditTextPreference
			  	android:key="urlcalendar"
			  	android:defaultValue="@string/urlcalendar"
			  	android:title="Calendar Data URL"
			  	android:summary="URL used to fetch the Calendar data"
			  ></EditTextPreference>
			  <EditTextPreference
			  	android:key="urlactivity"
			  	android:defaultValue="@string/urlactivity"
			  	android:title="Activity Data URL"
			  	android:summary="URL used to fetch the Activity data"
			  ></EditTextPreference>
			  <EditTextPreference
			  	android:key="urlactivityjson"
			  	android:defaultValue="@string/urlactivityjson"
			  	android:title="Activity json Data URL"
			  	android:summary="URL used to fetch the Activity data as json"
			  ></EditTextPreference>
			  <EditTextPreference
			  	android:key="urlservicesjson"
			  	android:defaultValue="@string/urlservicesjson"
			  	android:title="Services json Data URL"
			  	android:summary="URL used to fetch the Services data as json"
			  ></EditTextPreference>
			  <EditTextPreference
			    android:key="urlmap"
			  	android:defaultValue="@string/urlmap"
			  	android:title="Map Data URL"
			  	android:summary="URL used to fetch the Map data"			      
			      >
			  </EditTextPreference>			  			  			  			  
			  <EditTextPreference
			    android:key="urlmapjson"
			  	android:defaultValue="@string/urlmapjson"
			  	android:title="Map Data URL json"
			  	android:summary="URL used to fetch the Map data json"			      
			      >
			  </EditTextPreference>			  			  			  			  
			  <EditTextPreference
			  	android:key="urlcalendarjson"
			  	android:defaultValue="@string/urlcalendarjson"
			  	android:title="Events json Data URL"
			  	android:summary="URL used to fetch the Events data as json"
			  ></EditTextPreference>
			  </PreferenceCategory>    

</PreferenceScreen>
